<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_start"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:src="@drawable/logo_start"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/colorPrimary"
        android:padding="12dp"
        android:text="@string/login"
        android:layout_gravity="center"/>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/link_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_register"
            android:clickable="true"
            android:gravity="center"
            android:textSize="10sp"
            android:layout_gravity="left"/>
        <TextView
            android:id="@+id/link_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:clickable="true"
            android:gravity="center"
            android:textSize="10sp"
            android:layout_gravity="right"/>
    </FrameLayout>


</LinearLayout>